fix layout(vertical center align)

--- a/PJT1/aboutme.css
+++ b/PJT1/aboutme.css
@@ -1,6 +1,17 @@
 section{
-  padding-top: 100px;
+  position: relative;
 }
+
+
+.layout_section{
+  /* text-align: center; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
 
 .list_article{
   padding-top: 20px;
