--- a/PJT1/common.css
+++ b/PJT1/common.css
@@ -34,12 +34,15 @@ header > nav {
 
 section{ 
   min-height: 700px;
+  /* height: auto; */
   min-width: 1000px;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding-top: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 100px;
   padding-right: 100px;
+  
 }
 
 footer{
