--- a/PJT1/photo.css
+++ b/PJT1/photo.css
@@ -1,13 +1,31 @@
 section{
-    padding-top: 50px;
+    
 }
 
-section > article{
+
+section{
+    position: relative;
+}
+  
+  
+.layout_section{
+    /* text-align: center; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+}
+  
+
+
+section > .layout_section > article{
     display: inline-block;
     padding: 20px;
     min-width: 1000px;
     text-align: left;
 }
+
 
 article > img{
     width: 400px;
